--- a/plus0ne_react/src/css/index.css
+++ b/plus0ne_react/src/css/index.css
@@ -6,6 +6,7 @@
 @import "containers.css";
 @import "theme.css";
 @import "loader.css";
+@import "typingIndicator.css";
 
 .splash-screen {
     position: fixed;
@@ -144,10 +145,16 @@ body {
 
 
 .app-bar-icon-container {
-    width: 54px;
+    width: 120px;
     height: 54px;
     display: flex;
     align-items: center;
+}
+.app-bar-icon-container-left{
+    justify-content: flex-start;
+}
+.app-bar-icon-container-right{
+    justify-content: flex-end;
 }
 
 .app-title-container {
@@ -429,4 +436,81 @@ body {
 
 .host-message-content-container>div>div::after {
     border: unset !important;
+}
+
+.preview-mini-content-container{
+    height: 144px;
+    background-color: #fefefe!important;
+}
+.preview-mini-container{
+    height: 144px;
+    margin-top: 32px;
+}
+.preview-mini-container .message-avatar-container{
+    top: -18px;
+}
+.preview-image-background-container{
+    width: 100%;
+    height: 100%;
+    background-image: url(https://source.unsplash.com/335x180/?nature);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+}
+.preview-mini-header{
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.preview-mini-body{
+    height: 54px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255,255,255,0.8);
+}
+.preview-mini-title{
+    font-size: 24px;
+    height: 36;
+    color: #F77064;
+}
+.preview-mini-address{
+    height: 18;
+    font-size: 16;
+}
+
+.preview-mini-date-container, .preview-mini-time-container{
+    display: flex;
+    width: 60px;
+    height: 100%;
+    align-items: flex-end;
+    justify-content: center;
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+}
+
+.preview-mini-icon-container{
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.save-cancel-container{
+    display: flex;
+}
+
+.accept-button{
+    color: lime !important;
+}
+.cancel-button{
+    color: red !important;
+}
+
+.app-bar__edit-event{
+    display: flex;
 }
