--- a/plus0ne_react/src/css/index.css
+++ b/plus0ne_react/src/css/index.css
@@ -7,6 +7,9 @@
 @import "theme.css";
 @import "loader.css";
 @import "typingIndicator.css";
+@import "inputField.css";
+@import "inviteGuest.css";
+@import "imageUploader.css";
 
 .splash-screen {
     position: fixed;
@@ -203,6 +206,7 @@ body {
     overflow: hidden;
     overflow-y: scroll;
     flex-grow: 1;
+    padding-bottom: 60px;
 }
 
 .user-input-container {
@@ -310,11 +314,16 @@ body {
 .preview-image-container {
     width: 100%;
     height: 180px;
+    position: relative;
 }
 
 .preview-pic-loader-container {
     height: 100%;
     width: 100%;
+}
+.preview-pic-loader-container button{
+    position: fixed;
+    right: 12px;
 }
 
 .preview-image {
@@ -513,4 +522,7 @@ body {
 
 .app-bar__edit-event{
     display: flex;
+}
+.app-bar__edit-event .MuiSvgIcon-root{
+    color:white;
 }
