--- a/plus0ne_react/src/css/containers.css
+++ b/plus0ne_react/src/css/containers.css
@@ -1,23 +1,25 @@
 .main-container{
     position: relative;
-    width: 100vw;
+    width: 100%;
+    max-width: 430px;
     height: 100vh;
     overflow: hidden;
 }
 .main-appbar-container{
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: var(--app-bar-height);
 }
 .main-content-container{
     position: absolute;
     top: var(--app-bar-height);
-    width: 100vw;
-    height: calc(100vh - var(--app-bar-height));
+    width: 100%;
+    height: calc(100% - var(--app-bar-height));
 }
 
 .padding-12-container{
-    width: calc(100vw - 24px);
+    width: calc(100% - 24px);
     padding: 0px 12px 0px 12px;
     height: 100%;
+    overflow-y: auto;
 }
