--- a/plus0ne_react/src/css/imageUploader.css
+++ b/plus0ne_react/src/css/imageUploader.css
@@ -17,12 +17,15 @@
     display: flex;
     justify-content: space-between;
 }
-.selected-image-input .selected-image-input{
+.selected-image-input{
     width: 88px;
 }
 
 /* Spinner 3Balls Scale */
 .image-uploader__spinner{
+    background: rgba(255,255,255, 0.4);
+    width: 100%;
+    height: 100%;
     position: absolute;
     display: flex;
     justify-content: center;
