--- a/plus0ne_react/src/css/index.css
+++ b/plus0ne_react/src/css/index.css
@@ -2,7 +2,11 @@
     --app-bar-height: 56px;
     --date-location-box-height: 44px;
 }
-
+#root{
+    display: flex;
+    justify-content: center;
+    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(253,239,132,1) 0%, rgba(247,198,169,1) 54.2%, rgba(21,186,196,1) 100.3% );
+}
 @import "containers.css";
 @import "theme.css";
 @import "loader.css";
@@ -16,6 +20,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
+    left: 0;
     justify-content: center;
     align-items: center;
     top: 0;
@@ -83,8 +88,9 @@ body {
 }
 
 .message-container {
-    height: 92px;
+    min-height: 92px;
     display: flex;
+    margin: 16px 0; 
     align-items: center;
     position: relative;
     margin-bottom: -16px;
@@ -94,7 +100,7 @@ body {
     display: flex;
     align-items: center;
     position: absolute;
-    top: 6px;
+    top: 0px;
     z-index: 5;
 }
 
@@ -106,11 +112,13 @@ body {
 
 .message-content-container {
     width: calc(100% - 72px);
-    position: absolute;
-    height: 42px;
+    position: relative;
+    min-height: 42px;
+    max-height: calc(100% - 32px);
     left: 22px;
     display: flex;
     align-items: center;
+    overflow: auto;
     padding: 6px 24px 6px 26px;
 }
 
@@ -122,6 +130,7 @@ body {
 .message-content {
     font-size: 14px;
     word-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .message-content-response {
@@ -176,7 +185,7 @@ body {
 }
 
 .day-night-row-container {
-    width: 100vw;
+    width: 100%;
     height: 200px;
     display: flex;
     flex-direction: column;
@@ -269,7 +278,17 @@ body {
     width: calc(50% - 6px);
     height: 100%;
 }
-
+.date-time-item span{
+    color: white;
+    font-weight: bold;
+}
+.date-time-item input{
+    text-align: center;
+    font-size: bold;
+}
+.date-time-item p{
+    display: none;
+}
 .location-container {
     width: 100%;
     height: var(--date-location-box-height);
@@ -320,10 +339,11 @@ body {
 .preview-pic-loader-container {
     height: 100%;
     width: 100%;
+    position: relative;
 }
-.preview-pic-loader-container button{
-    position: fixed;
-    right: 12px;
+.preview-pic__custom-pic-selector{
+    position: absolute;
+    right: 0;
 }
 
 .preview-image {
@@ -373,7 +393,7 @@ body {
 }
 
 .message-container__user-response {
-    max-width: 72%;
+    max-width: 85%;
     min-width: 88px;
     justify-content: center;
 }
@@ -421,7 +441,7 @@ body {
 }
 
 .edit-event-textfield input {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 600;
     text-align: center;
     color: white;
@@ -452,7 +472,7 @@ body {
     background-color: #fefefe!important;
 }
 .preview-mini-container{
-    height: 144px;
+    height: 164px;
     margin-top: 32px;
 }
 .preview-mini-container .message-avatar-container{
@@ -492,9 +512,11 @@ body {
 
 .preview-mini-date-container, .preview-mini-time-container{
     display: flex;
-    width: 60px;
+    min-width: 60px;
+    margin: 6px;
+    align-items: center;
     height: 100%;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     color: #fff;
     font-weight: 500;
@@ -525,4 +547,7 @@ body {
 }
 .app-bar__edit-event .MuiSvgIcon-root{
     color:white;
+}
+.description-text-area textarea{
+    color: white;
 }
